--- a/FlameUI/FlameUI.vcxproj
+++ b/FlameUI/FlameUI.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="Label.h" />
     <ClInclude Include="LinearPlacer.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="MenuBar.h" />
     <ClInclude Include="MenuFrame.h" />
     <ClInclude Include="MenuPainter.h" />
     <ClInclude Include="Panel.h" />
@@ -194,6 +195,7 @@
     <ClCompile Include="LinearPlacer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="MenuBar.cpp" />
     <ClCompile Include="MenuFrame.cpp" />
     <ClCompile Include="MenuPainter.cpp" />
     <ClCompile Include="Panel.cpp" />
